--- a/index.html
+++ b/index.html
@@ -7,6 +7,80 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <section class="character-selection">
+      <ul class="characters">
+        <li>
+          <img
+            id="McDonalds"
+            src="imgs/McDonalds.png"
+            alt="AI generated image of McDonalds mascot as Mortal Kombat character"
+          />
+        </li>
+        <li>
+          <img
+            id="InNOut"
+            src="imgs/InNOut.png"
+            alt="AI generated image of InNOut mascot as Mortal Kombat character"
+          />
+        </li>
+        <li>
+          <img
+            id="PandaExpress"
+            src="imgs/PandaExpress.png"
+            alt="AI generated image of Panda Express mascot as Mortal Kombat character"
+          />
+        </li>
+        <li>
+          <img
+            id="Popeyes"
+            src="imgs/Popeyes.png"
+            alt="AI generated image of Popeyes mascot as Mortal Kombat character"
+          />
+        </li>
+        <li>
+          <img
+            id="Wendys"
+            src="imgs/Wendys.png"
+            alt="AI generated image of Wendys mascot as Mortal Kombat character"
+          />
+        </li>
+        <li>
+          <img
+            id="BurgerKing"
+            src="imgs/BurgerKing.png"
+            alt="AI generated image of Burger Kinds mascot as Mortal Kombat character"
+          />
+        </li>
+        <li>
+          <img
+            id="KFC"
+            src="imgs/KFC.png"
+            alt="AI generated image of KFC mascot as Mortal Kombat character"
+          />
+        </li>
+        <li>
+          <img
+            id="Mark"
+            src="imgs/Wahlburgers.png"
+            alt="AI generated image of Mark Wahlberg as Mortal Kombat character"
+          />
+        </li>
+        <li>
+          <img
+            id="Chipotle"
+            src="imgs/Chipotle.png"
+            alt="AI generated image of Chipotle mascot as Mortal Kombat character"
+          />
+        </li>
+        <li>
+          <img
+            id="TacoBell"
+            src="imgs/TacoBell.png"
+            alt="AI generated image of Taco Bells mascot as Mortal Kombat character"
+          />
+        </li>
+      </ul>
+    </section>
     <script src="js/app.js"></script>
   </body>
 </html>
