working on mouseover and mouseout for McD and In

--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
         </li>
       </ul>
     </section>
+    <div class="selector">
+      <img src="imgs/McDonalds.png" class="hidden" id="select-McDonalds" />
+      <img src="imgs/InNOut.png" class="hidden" id="select-InNOut" />
+    </div>
     <script src="js/app.js"></script>
   </body>
 </html>
