added all fighters to selector

--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@
     <div class="selector">
       <img src="imgs/McDonalds.png" class="hidden" id="select-McDonalds" />
       <img src="imgs/InNOut.png" class="hidden" id="select-InNOut" />
+      <img
+        src="imgs/PandaExpress.png"
+        class="hidden"
+        id="select-PandaExpress"
+      />
+      <img src="imgs/Popeyes.png" class="hidden" id="select-popeyes" />
+      <img src="imgs/Wendys.png" class="hidden" id="select-wendys" />
+      <img src="imgs/BurgerKing.png" class="hidden" id="select-burgerKing" />
+      <img src="imgs/KFC.png" class="hidden" id="select-kfc" />
+      <img src="imgs/Wahlburgers.png" class="hidden" id="select-wahlburgers" />
+      <img src="imgs/Chipotle.png" class="hidden" id="select-chipotle" />
+      <img src="imgs/TacoBell.png" class="hidden" id="select-tacoBell" />
     </div>
     <script src="js/app.js"></script>
   </body>
