player can choose player, but need to fix so no more selection is possible

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
           </li>
         </ul>
       </section>
+
       <section class="player-1 player--active">
+        <h2>Player 1</h2>
         <div class="selector-1">
           <img src="imgs/McDonalds.png" class="hidden" id="select-McDonalds" />
           <img src="imgs/InNOut.png" class="hidden" id="select-InNOut" />
@@ -109,6 +111,7 @@
         </div>
       </section>
       <section class="player-2">
+        <h2>Player 2</h2>
         <div class="selector-2">
           <img src="imgs/McDonalds.png" class="hidden" id="select-McDonalds" />
           <img src="imgs/InNOut.png" class="hidden" id="select-InNOut" />
