--- a/index.html
+++ b/index.html
@@ -82,61 +82,70 @@
           </li>
         </ul>
       </section>
-
-      <section class="player-1 player--active">
-        <h2>Player 1</h2>
-        <div class="selector-1">
-          <img src="imgs/McDonalds.png" class="hidden" id="select-McDonalds" />
-          <img src="imgs/InNOut.png" class="hidden" id="select-InNOut" />
-          <img
-            src="imgs/PandaExpress.png"
-            class="hidden"
-            id="select-PandaExpress"
-          />
-          <img src="imgs/Popeyes.png" class="hidden" id="select-popeyes" />
-          <img src="imgs/Wendys.png" class="hidden" id="select-wendys" />
-          <img
-            src="imgs/BurgerKing.png"
-            class="hidden"
-            id="select-burgerKing"
-          />
-          <img src="imgs/KFC.png" class="hidden" id="select-kfc" />
-          <img
-            src="imgs/Wahlburgers.png"
-            class="hidden"
-            id="select-wahlburgers"
-          />
-          <img src="imgs/Chipotle.png" class="hidden" id="select-chipotle" />
-          <img src="imgs/TacoBell.png" class="hidden" id="select-tacoBell" />
-        </div>
-      </section>
-      <section class="player-2">
-        <h2>Player 2</h2>
-        <div class="selector-2">
-          <img src="imgs/McDonalds.png" class="hidden" id="select-McDonalds" />
-          <img src="imgs/InNOut.png" class="hidden" id="select-InNOut" />
-          <img
-            src="imgs/PandaExpress.png"
-            class="hidden"
-            id="select-PandaExpress"
-          />
-          <img src="imgs/Popeyes.png" class="hidden" id="select-popeyes" />
-          <img src="imgs/Wendys.png" class="hidden" id="select-wendys" />
-          <img
-            src="imgs/BurgerKing.png"
-            class="hidden"
-            id="select-burgerKing"
-          />
-          <img src="imgs/KFC.png" class="hidden" id="select-kfc" />
-          <img
-            src="imgs/Wahlburgers.png"
-            class="hidden"
-            id="select-wahlburgers"
-          />
-          <img src="imgs/Chipotle.png" class="hidden" id="select-chipotle" />
-          <img src="imgs/TacoBell.png" class="hidden" id="select-tacoBell" />
-        </div>
-      </section>
+      <div class="fight-section">
+        <section class="player-1 player--active">
+          <h2>Player 1</h2>
+          <div class="selector-1">
+            <img
+              src="imgs/McDonalds.png"
+              class="hidden"
+              id="select-McDonalds"
+            />
+            <img src="imgs/InNOut.png" class="hidden" id="select-InNOut" />
+            <img
+              src="imgs/PandaExpress.png"
+              class="hidden"
+              id="select-PandaExpress"
+            />
+            <img src="imgs/Popeyes.png" class="hidden" id="select-popeyes" />
+            <img src="imgs/Wendys.png" class="hidden" id="select-wendys" />
+            <img
+              src="imgs/BurgerKing.png"
+              class="hidden"
+              id="select-burgerKing"
+            />
+            <img src="imgs/KFC.png" class="hidden" id="select-kfc" />
+            <img
+              src="imgs/Wahlburgers.png"
+              class="hidden"
+              id="select-wahlburgers"
+            />
+            <img src="imgs/Chipotle.png" class="hidden" id="select-chipotle" />
+            <img src="imgs/TacoBell.png" class="hidden" id="select-tacoBell" />
+          </div>
+        </section>
+        <section class="player-2">
+          <h2>Player 2</h2>
+          <div class="selector-2">
+            <img
+              src="imgs/McDonalds.png"
+              class="hidden"
+              id="select-McDonalds"
+            />
+            <img src="imgs/InNOut.png" class="hidden" id="select-InNOut" />
+            <img
+              src="imgs/PandaExpress.png"
+              class="hidden"
+              id="select-PandaExpress"
+            />
+            <img src="imgs/Popeyes.png" class="hidden" id="select-popeyes" />
+            <img src="imgs/Wendys.png" class="hidden" id="select-wendys" />
+            <img
+              src="imgs/BurgerKing.png"
+              class="hidden"
+              id="select-burgerKing"
+            />
+            <img src="imgs/KFC.png" class="hidden" id="select-kfc" />
+            <img
+              src="imgs/Wahlburgers.png"
+              class="hidden"
+              id="select-wahlburgers"
+            />
+            <img src="imgs/Chipotle.png" class="hidden" id="select-chipotle" />
+            <img src="imgs/TacoBell.png" class="hidden" id="select-tacoBell" />
+          </div>
+        </section>
+      </div>
     </main>
     <script src="js/app.js"></script>
   </body>
