player 2 can choose, need to figure out how to do one at a time

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </ul>
       </section>
       <div class="fight-section">
-        <section class="player-1 player--active">
+        <section class="player-1">
           <h2>Player 1</h2>
           <div class="selector-1">
             <img
@@ -120,29 +120,29 @@
             <img
               src="imgs/McDonalds.png"
               class="hidden"
-              id="select-McDonalds"
+              id="select-McDonalds2"
             />
-            <img src="imgs/InNOut.png" class="hidden" id="select-InNOut" />
+            <img src="imgs/InNOut.png" class="hidden" id="select-InNOut2" />
             <img
               src="imgs/PandaExpress.png"
               class="hidden"
-              id="select-PandaExpress"
+              id="select-PandaExpress2"
             />
-            <img src="imgs/Popeyes.png" class="hidden" id="select-popeyes" />
-            <img src="imgs/Wendys.png" class="hidden" id="select-wendys" />
+            <img src="imgs/Popeyes.png" class="hidden" id="select-popeyes2" />
+            <img src="imgs/Wendys.png" class="hidden" id="select-wendys2" />
             <img
               src="imgs/BurgerKing.png"
               class="hidden"
-              id="select-burgerKing"
+              id="select-burgerKing2"
             />
-            <img src="imgs/KFC.png" class="hidden" id="select-kfc" />
+            <img src="imgs/KFC.png" class="hidden" id="select-kfc2" />
             <img
               src="imgs/Wahlburgers.png"
               class="hidden"
-              id="select-wahlburgers"
+              id="select-wahlburgers2"
             />
-            <img src="imgs/Chipotle.png" class="hidden" id="select-chipotle" />
-            <img src="imgs/TacoBell.png" class="hidden" id="select-tacoBell" />
+            <img src="imgs/Chipotle.png" class="hidden" id="select-chipotle2" />
+            <img src="imgs/TacoBell.png" class="hidden" id="select-tacoBell2" />
           </div>
         </section>
       </div>
