added button for Ready to Fight?

--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
             <img src="imgs/TacoBell.png" class="hidden" id="select-tacoBell" />
           </div>
         </section>
+        <button class="prompt hidden">
+          <div>Ready to Fight?</div>
+        </button>
         <section class="player-2">
           <h2>Player 2</h2>
           <div class="selector-2">
