--- a/index.html
+++ b/index.html
@@ -114,8 +114,11 @@
             <img src="imgs/TacoBell.png" class="hidden" id="select-tacoBell" />
           </div>
         </section>
-        <button class="prompt hidden">
-          <div>Ready to Fight?</div>
+        <button class="prompt-ready hidden">Ready to Fight?</button>
+        <button class="prompt-directions hidden">
+          Player 1: You have 5 seconds to press the SPACE BAR as fast as
+          possible. <br />The more presses the more damage you do to your
+          opponent. <br />Click here when ready.
         </button>
         <section class="player-2">
           <h2>Player 2</h2>
@@ -149,6 +152,10 @@
           </div>
         </section>
       </div>
+      <section class="stats">
+        <div class="player--1">Health:</div>
+        <div class="player--2">Health:</div>
+      </section>
     </main>
     <script src="js/app.js"></script>
   </body>
