--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
         </section>
       </div>
       <section class="stats">
-        <div class="player--1">Health:</div>
-        <div class="player--2">Health:</div>
+        <div class="player--1"></div>
+        <div class="player--2"></div>
       </section>
     </main>
     <script src="js/app.js"></script>
