each player has key press count

--- a/index.html
+++ b/index.html
@@ -116,7 +116,12 @@
         </section>
         <button class="prompt-ready hidden">Ready to Fight?</button>
         <button class="prompt-directions hidden">
-          Player 1: You have 5 seconds to press the SPACE BAR as fast as
+          Player 1: <br />You have 5 seconds to press the SPACE BAR as fast as
+          possible. <br />The more presses the more damage you do to your
+          opponent. <br />Click here when ready.
+        </button>
+        <button class="prompt-directions-player2 hidden">
+          Player 2: <br />You have 5 seconds to press the SPACE BAR as fast as
           possible. <br />The more presses the more damage you do to your
           opponent. <br />Click here when ready.
         </button>
@@ -153,8 +158,8 @@
         </section>
       </div>
       <section class="stats">
-        <div class="player--1"></div>
-        <div class="player--2"></div>
+        <div class="player--1">Health: 100</div>
+        <div class="player--2">Health: 100</div>
       </section>
     </main>
     <script src="js/app.js"></script>
