added vs. section

--- a/index.html
+++ b/index.html
@@ -9,14 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Ruwudu:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Tilt+Prism&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Merriweather&family=Ruwudu:wght@400;500;600;700&family=Tilt+Prism&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -99,6 +92,11 @@
           </li>
         </ul>
       </section>
+      <div class="choosen-player">
+        <p></p>
+        <p>VS.</p>
+        <p></p>
+      </div>
       <div class="fight-section">
         <section class="player-1">
           <h2>Player 1</h2>
