completed css work on button

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </section>
       <div class="choosen-player">
         <p></p>
-        <p>VS.</p>
+        <span>VS.</span>
         <p></p>
       </div>
       <div class="fight-section">
