added endGame, but still not working fully

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
           possible. <br />The more presses the more damage you do to your
           opponent. <br />Click here when ready.
         </button>
+        <button class="winner hidden"></button>
         <section class="player-2">
           <h2>Player 2</h2>
           <div class="selector-2">
