display damage works

--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
       </div>
       <section class="stats">
         <div class="player--1">Health: 10</div>
+        <div class="player--1-damage">Damage:</div>
+        <div class="player--2-damage">Damage:</div>
         <div class="player--2">Health: 10</div>
       </section>
     </main>
